crates/djls-semantic/tests/snapshots/corpus__repos__djangoproject.com__releases__templatetags__release_notes.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "releases.templatetags.release_notes::tag::get_latest_micro_release":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: version
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "releases.templatetags.release_notes::tag::release_notes":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: version
        required: true
        kind: Variable
        position: 0
      - name: show_version
        required: false
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
